<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:paddingVertical="32dp"
    android:layout_height="wrap_content" >

    <EditText
        android:id="@+id/rowInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/enter_rows"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/columnInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/enter_columns"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/rowInput"
        app:layout_constraintTop_toBottomOf="@+id/rowInput" />

    <EditText
        android:id="@+id/minesInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/enter_mines"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/columnInput"
        app:layout_constraintTop_toBottomOf="@+id/columnInput" />
</androidx.constraintlayout.widget.ConstraintLayout>