<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:keepScreenOn="true"
    tools:context=".PlayGameActivity">

    <LinearLayout
        android:id="@+id/bezel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bezelBG"
        android:gravity="center"
        android:minHeight="64dp"
        android:orientation="horizontal"
        android:paddingVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/mines_count_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mines_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/mines"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/mines_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                tools:text="13" />
        </LinearLayout>

        <Button
            android:id="@+id/restart_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/restart"
            android:textColor="@color/bezelBG"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/time_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/time_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/time"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/empty_time"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <com.otaliastudios.zoom.ZoomLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:alignment="top"
        app:hasClickableChildren="true"
        app:horizontalPanEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bezel"
        app:overScrollHorizontal="false"
        app:overScrollVertical="false"
        app:scrollEnabled="false"
        app:verticalPanEnabled="false"
        app:zoomEnabled="false">

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/board_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp">

        </androidx.gridlayout.widget.GridLayout>
    </com.otaliastudios.zoom.ZoomLayout>
</androidx.constraintlayout.widget.ConstraintLayout>