<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WinActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/elegant_celebration_background_gold_01" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/excellent"
        android:textColor="@color/head"
        android:textSize="56sp"
        app:layout_constraintBottom_toTopOf="@+id/difficulty_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:id="@+id/your_time_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/best_time_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficulty_container">

        <TextView
            android:id="@+id/your_time_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/your_time"
            android:textColor="@color/text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/your_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:fontFamily="casual"
            android:gravity="center"
            android:textColor="@color/text"
            android:textSize="24sp"
            tools:text="03:50 s" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/best_time_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/your_time_container">

        <TextView
            android:id="@+id/best_time_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/best_time"
            android:textColor="@color/text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/best_time_win"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:fontFamily="casual"
            android:gravity="center"
            android:textColor="@color/text"
            android:textSize="24sp"
            tools:text="02:36 s" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/difficulty_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="64dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/your_time_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/difficulty_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/difficulty"
            android:textColor="@color/text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/difficulty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:fontFamily="casual"
            android:gravity="center"
            android:textColor="@color/text"
            android:textSize="24sp"
            tools:text="Easy" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Continue"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/best_time_container" />

</androidx.constraintlayout.widget.ConstraintLayout>